adding parameters over line and line-machine
